- Fixed more than 30 HTML and XML well-formedness errors.

--- a/misc/linux-font-test.html
+++ b/misc/linux-font-test.html
@@ -19,19 +19,19 @@
   </style>
  </head>
  <body>
-  <span class="f5">5pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f6">6pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f7">7pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f8">8pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f9">9pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f10">10pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f11">11pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f12">12pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f13">13pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f14">14pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f15">15pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f16">16pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f17">17pt abcdefghijklmnopqrstuvwxyz</span><br>
-  <span class="f18">18pt abcdefghijklmnopqrstuvwxyz</span><br>
+  <span class="f5">5pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f6">6pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f7">7pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f8">8pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f9">9pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f10">10pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f11">11pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f12">12pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f13">13pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f14">14pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f15">15pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f16">16pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f17">17pt abcdefghijklmnopqrstuvwxyz</span><br />
+  <span class="f18">18pt abcdefghijklmnopqrstuvwxyz</span><br />
  </body>
 </html>
